--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
-    "socket.io-client": "^4.6.2"
+    "socket.io-client": "2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
