--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
     "cors": "^2.8.5",
     "express": "4.17.1",
+    "mocha": "6.2.1",
     "mongoose": "5.7.1",
+    "onchange": "6.1.0",
     "socket.io": "4.6.2",
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "set NODE_ENV=test&& mocha \"./{,!(node_modules|client)/**/}*.test.js\"",
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test"
   }
 }
