Add sanitize and helmet packages (kodilla task 31.1)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "chai-http": "4.3.0",
     "cors": "^2.8.5",
     "express": "4.17.1",
+    "global": "^4.4.0",
+    "helmet": "3.21.1",
     "mocha": "6.2.1",
+    "mongo-sanitize": "1.0.1",
     "mongoose": "5.7.1",
     "onchange": "6.1.0",
     "socket.io": "4.6.2",
